--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,7 +15,7 @@
     "rootDir": "./src",
     "resolveJsonModule": true,
     "useUnknownInCatchVariables": false,
-    "types": ["node"]
+    "types": ["node","jest"]
   },
   "exclude": ["dist", "public", "integra-crm-backend-main", "src/**/__tests__", "src/**/*.spec.ts"]
 }
